<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/apiKeyInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/hint_enter_api_key"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apiSecretInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hint_enter_api_secret"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintTop_toBottomOf="@id/apiKeyInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/apiSecretInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show"
        app:layout_constraintTop_toBottomOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
